tests/fixtures/valid/layout_stage4/multiline_declaration_call.pine
//@version=6
indicator(
    "Multiline declaration",
    overlay = true,
    max_lines_count = 10
)
x = close
