tests/fixtures/invalid/syntax/braced_enum_block.pine
//@version=6
indicator("x")
enum X { A, B }
